Enhance signup functionality and add invoice navigation link in admin views

--- a/views/addproduct.ejs
+++ b/views/addproduct.ejs
@@ -17,6 +17,7 @@
             <li class="nav-item"><a href="/adminview" class="nav-link">View Product</a></li>
             <li class="nav-item active"><a href="/addproduct" class="nav-link">Add Product</a></li>
             <li class="nav-item"><a href="/admin/viewuser" class="nav-link">User Management</a></li>
+            <li class="nav-item"><a href="/admin/invoices" class="nav-link">All Invoices</a></li>
             <li class="nav-item"><a href="/" class="nav-link">Log Out</a></li>
           </ul>
         </nav>
