Fix spelling of 'Received' in order status and CSS class

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1062,7 +1062,7 @@ button.no-print:hover {
   border: 1px solid #4da6ff;
 }
 
-.status-Recieved {
+.status-Received {
   background: #c8f7c5;
   color: #205820;
   border: 1px solid #4caf50;
